--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "17.2.4",
     "@angular/platform-browser-dynamic": "17.2.4",
     "@angular/router": "17.2.4",
+    "@ngx-translate/core": "^15.0.0",
     "angular-in-memory-web-api": "~0.17.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
