--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "17.2.4",
+    "@angular/cdk": "^18.1.3",
     "@angular/common": "17.2.4",
     "@angular/compiler": "17.2.4",
     "@angular/core": "17.2.4",
