--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/cart-styles.css"
             ],
             "scripts": []
           },
