--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.css",
               "src/assets/css/item-styles.css"
             ],
@@ -79,6 +80,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.css"
             ],
             "scripts": []
